@@ -1,5 +1,0 @@
-devhelp
-devhelp.postinst.debhelper
-devhelp.prerm.debhelper
-devhelp.substvars
-files
