@@ -1,19 +1,0 @@
-Source: devhelp
-Section: devel
-Priority: optional
-Maintainer: Johan Dahlin <zilch.am@home.se>
-Standards-Version: 3.5.2
-
-Package: devhelp
-Architecture: any
-Depends: ${shlibs:Depends}
-Description: a developers help program.
- A developers help program. Browse and search GNOME API and GNU Manuals
- Features
-   * Full indexing of books in XML.
-   * HTML viewer (GtkHTML).
-   * Search by function, struct, macro etc.
-   * Transparent HTTP support with GnomeVFS.
-   * Commandline search powered by bonobo, with nice emacs integration.
-   * Simple installer for books.
-   * 5 zoom levels.
