@@ -1,24 +1,0 @@
-This package was debianized by Johan Dahlin <zilch.am@home.se> on
-Thu,  7 Jun 2001 20:06:40 -0400.
-
-It was downloaded from http://www.devhelp.net
-
-Upstream Maintainer(s): Mikael Hallendal <micke@codefactory.se>
-
-Copyright:
-
-Copyright (C) 2000, 2001  The Free Software Foundation
-
-This program is free software; you can redistribute it and/or modify
-it under the terms of the GNU General Public License as published by
-the Free Software Foundation; either version 2 of the License, or
-(at your option) any later version.
-
-This program is distributed in the hope that it will be useful,
-but WITHOUT ANY WARRANTY; without even the implied warranty of
-MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-GNU General Public License for more details.
-
-On Debian GNU/Linux systems, the full text of the GNU General Public
-License can be found in the file /usr/share/common-licenses/GPL.
-
