@@ -1,36 +1,0 @@
-.TH "devhelp" "1" "0.2" "Johan Dahlin <zilch.am@home.se>" "devhelp"
-.SH "NAME"
-.LP 
-devhelp \- A developers help program.
-.SH "SYNTAX"
-.LP 
-devhelp [\fIOPTIONS\fP]
-.SH "DESCRIPTION"
-.LP 
-DevHelp is a help system for GNOME. 
-.br 
-.SH "OPTIONS"
-.LP
-.TP 
-\fB\-s, \-\-search\fR=STRING
-Search for a function.
-.SH "EXAMPLES"
-.LP 
-To run this program the standard way type:
-.LP 
-devhelp
-.LP
-If you would like to search for a function, type:
-.LP 
-devhelp -s search-string
-.SH "AUTHORS"
-.LP 
-Copyright (C) 2000, 2001  The Free Software Foundation
-.LP 
-DevHelp was written by Johan Dahlin <zilch.am@home.se>, Mikael Hallendal <micke@codefactory.se> and Richard Hult <rhult@codefactory.se>.
-.LP
-This manual page is Copyright (c) 2001  Johan Dahlin <zilch.am@home.se>.
-It has been written for the Debian GNU/Linux distribution and is distributed under the GNU General Public License. As such, it may be used, modified and distributed by anyone else as long as this copyright notice is preserved.
-.SH "SEE ALSO"
-.LP 
-gnome(1)
