@@ -1,73 +1,0 @@
-#!/usr/bin/make -f
-
-package=devhelp
-# export DH_VERBOSE=1
-export DH_COMPAT=3
-
-build: build-stamp
-build-stamp:
-	dh_testdir
-	dh_clean
-	
-	CFLAGS="-O3" \
-	./configure 				\
-                --disable-install-schemas       \
-		--prefix=/usr			\
-		--sysconfdir=/etc		\
-		--mandir=/usr/share/man
-
-	$(MAKE)
-
-	touch build-stamp
-
-
-clean:
-	dh_testdir
-	dh_testroot
-	-rm -f build-stamp install-stamp
-	-$(MAKE) distclean
-	dh_clean
-
-
-install: install-stamp
-install-stamp: build-stamp
-	dh_testdir
-	dh_testroot
-	dh_clean -k
-	dh_installdirs
-	$(MAKE) install 					        \
-		sysconfdir=`pwd`/debian/$(package)/etc                  \
-		prefix=`pwd`/debian/$(package)/usr		        \
-		mandir=`pwd`/debian/$(package)/usr/share/man	        \
-		datadir=`pwd`/debian/$(package)/usr/share	        \
-		pixmapdir=`pwd`/debian/$(package)/usr/share/pixmaps     \
-		desktopdir=`pwd`/debian/$(package)/usr/share/gnome/apps/Development
-	touch install-stamp
-
-
-binary-indep: build install
-
-
-binary-arch: build install
-	dh_testdir
-	dh_testroot
-
-	dh_installdocs README AUTHORS
-	dh_installchangelogs ChangeLog
-	dh_installman debian/$(package).1
-	#dh_installexamples
-	#dh_installinfo
-	dh_link
-	dh_strip
-	dh_compress
-	dh_fixperms
-	dh_installdeb
-	dh_shlibdeps
-	dh_gencontrol
-	dh_md5sums
-	dh_builddeb
-
-
-binary: binary-indep binary-arch
-
-.PHONY: binary binary-arch binary-indep binary clean install
