@@ -1,0 +1,4 @@
+application/x-devhelp
+        _description=DevHelp Book
+        category=Documents
+        icon_filename=devhelp.png
