@@ -1,0 +1,2 @@
+application/x-devhelp
+        ext: devhelp
