@@ -1,31 +1,0 @@
-<gconfschemafile>
-  <schemalist>
-    <schema>
-      <key>/schemas/apps/devhelp/sidebar_visible</key>
-      <applyto>/apps/devhelp/sidebar_visible</applyto>
-      <owner>devhelp</owner>
-      <type>bool</type>
-      <default>true</default>
-      <locale name="C">
-        <short>Sidebar visible</short>
-      </locale>
-    </schema>
-
-    <schema>
-    <key>/schemas/apps/devhelp/zoom_level</key>
-    <applyto>/apps/devhelp/zoom_level</applyto>
-    <owner>devhelp</owner>    
-    <type>int</type>
-    <default>2</default>
-    <locale name="C">
-       <short>Zoom level</short>
-     </locale>
-   </schema>
-     
-  </schemalist>
-  
-</gconfschemafile>
-
-
-
-
