@@ -1,11 +1,0 @@
-devhelp (0.3-1) unstable; urgency=low
-  
-  * New upstream release.
-  
- -- Johan Dahlin <jdahlin@telia.com>  Sun, 1 Dec 2001 20:20:13 -0400
- 
-devhelp (0.2.0.99-1) unstable; urgency=low
-
-  * Initial release.
-
- -- Johan Dahlin <zilch.am@home.se>  Wed, 6 Jun 2001 00:12:09 -0400
